[package]
name = "chunked-sparse-merkle"
authors = ["DelphinusLab <xgao@zoyoe.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "csm_service"
path = "src/main.rs"



[dependencies]
ff = "0.12"
# Use the locally-optimized host-circuits checkout (see `zkWasm-host-circuits/` in this workspace).
zkwasm-host-circuits = { path = "../../zkWasm-host-circuits", default-features = false, features = ["mongo-tokio-sync"] }
num-bigint = { version = "0.4" }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
hex = "0.4"
subtle = "2.4"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.83"
jsonrpc-v2 = "0.13.0"
http = "1.1.0"
tokio = "1.37.0"
actix-rt = "2.9.0"
actix-web = "4.6.0"
clap = { version = "3.2.5", features = ["derive"] }
tempfile = "3.18.0"
anyhow = "1.0"
#tokio = { version = "1", features = ["full"] }

[features]
default = []
